After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 696544 - goa-mc-plugin: Fix deprecation warnings
goa-mc-plugin: Fix deprecation warnings
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Accounts
unspecified
Other All
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2013-03-25 10:07 UTC by Emanuele Aina
Modified: 2013-03-27 14:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
goa-mc-plugin: Fix deprecation warnings (1.38 KB, patch)
2013-03-25 10:07 UTC, Emanuele Aina
committed Details | Review
goa-mc-plugin: Fix deprecation warnings (1.38 KB, patch)
2013-03-27 14:45 UTC, Emanuele Aina
committed Details | Review

Description Emanuele Aina 2013-03-25 10:07:13 UTC
The attached patch fixes the following deprecation warnings and unbreaks `make
distcheck' as it uses -Werror.

make[2]: Entering directory `/home/em/c/co/tizen-pc/empathy/goa-mc-plugin'
CC     mcp-account-manager-goa.lo
mcp-account-manager-goa.c: In function 'account_storage_iface_init':
mcp-account-manager-goa.c:607:3: warning: 'mcp_account_storage_iface_set_name' is deprecated (declared at /gnome-world-3.8/build/include/mission-control-5.5/mission-control-plugins/account-storage.h:158): Use 'iface->name = name' instead [-Wdeprecated-declarations]
mcp-account-manager-goa.c:608:3: warning: 'mcp_account_storage_iface_set_desc' is deprecated (declared at /gnome-world-3.8/build/include/mission-control-5.5/mission-control-plugins/account-storage.h:162): Use 'iface->desc = desc' instead [-Wdeprecated-declarations]
mcp-account-manager-goa.c:609:3: warning: 'mcp_account_storage_iface_set_priority' is deprecated (declared at /gnome-world-3.8/build/include/mission-control-5.5/mission-control-plugins/account-storage.h:154): Use 'iface->priority = prio' instead [-Wdeprecated-declarations]
mcp-account-manager-goa.c:610:3: warning: 'mcp_account_storage_iface_set_provider' is deprecated (declared at /gnome-world-3.8/build/include/mission-control-5.5/mission-control-plugins/account-storage.h:166): Use 'iface->provider = provider' instead [-Wdeprecated-declarations]
mcp-account-manager-goa.c:614:3: warning: 'mcp_account_storage_iface_implement_get' is deprecated (declared at /gnome-world-3.8/build/include/mission-control-5.5/mission-control-plugins/account-storage.h:170): Use 'iface->get = method' instead [-Wdeprecated-declarations]
mcp-account-manager-goa.c:615:3: warning: 'mcp_account_storage_iface_implement_list' is deprecated (declared at /gnome-world-3.8/build/include/mission-control-5.5/mission-control-plugins/account-storage.h:183): Use 'iface->list = method' instead [-Wdeprecated-declarations]
mcp-account-manager-goa.c:616:3: warning: 'mcp_account_storage_iface_implement_set' is deprecated (declared at /gnome-world-3.8/build/include/mission-control-5.5/mission-control-plugins/account-storage.h:173): Use 'iface->set = method' instead [-Wdeprecated-declarations]
mcp-account-manager-goa.c:617:3: warning: 'mcp_account_storage_iface_implement_delete' is deprecated (declared at /gnome-world-3.8/build/include/mission-control-5.5/mission-control-plugins/account-storage.h:180): Use 'iface->delete = method' instead [-Wdeprecated-declarations]
mcp-account-manager-goa.c:618:3: warning: 'mcp_account_storage_iface_implement_commit' is deprecated (declared at /gnome-world-3.8/build/include/mission-control-5.5/mission-control-plugins/account-storage.h:186): Use 'iface->commit = method' instead [-Wdeprecated-declarations]
mcp-account-manager-goa.c:619:3: warning: 'mcp_account_storage_iface_implement_ready' is deprecated (declared at /gnome-world-3.8/build/include/mission-control-5.5/mission-control-plugins/account-storage.h:193): Use 'iface->ready = method' instead [-Wdeprecated-declarations]
mcp-account-manager-goa.c:620:3: warning: 'mcp_account_storage_iface_implement_get_restrictions' is deprecated (declared at /gnome-world-3.8/build/include/mission-control-5.5/mission-control-plugins/account-storage.h:204): Use 'iface->get_restrictions = method' instead [-Wdeprecated-declarations]
mcp-account-manager-goa.c:621:3: warning: 'mcp_account_storage_iface_implement_get_identifier' is deprecated (declared at /gnome-world-3.8/build/include/mission-control-5.5/mission-control-plugins/account-storage.h:196): Use 'iface->get_identifier = method' instead [-Wdeprecated-declarations]
CCLD   mcp-account-manager-goa.la
Comment 1 Emanuele Aina 2013-03-25 10:07:17 UTC
Created attachment 239740 [details] [review]
goa-mc-plugin: Fix deprecation warnings
Comment 2 Xavier Claessens 2013-03-26 10:31:32 UTC
Looks good, but you need to bump the MC dependency probably.
Comment 3 Emanuele Aina 2013-03-27 14:16:05 UTC
AIUI we don't need any bump as we're doing exactly what the deprecated functions were doing, and the fields were already public.

This is the commit which deprecated those functions:
http://cgit.freedesktop.org/telepathy/telepathy-mission-control/commit/?id=f976919e

This is where the fields were made public (released in mc 5.7.11 and we depend on 5.13.1):
http://cgit.freedesktop.org/telepathy/telepathy-mission-control/commit/?id=34434732
Comment 4 Guillaume Desmottes 2013-03-27 14:29:11 UTC
Review of attachment 239740 [details] [review]:

All good then.
Comment 5 Emanuele Aina 2013-03-27 14:45:06 UTC
The following fix has been pushed:
22e67d0 goa-mc-plugin: Fix deprecation warnings
Comment 6 Emanuele Aina 2013-03-27 14:45:22 UTC
Created attachment 239955 [details] [review]
goa-mc-plugin: Fix deprecation warnings