goa-mc-plugin: Fix deprecation warnings

https://bugzilla.gnome.org/show_bug.cgi?id=696544